--- a/support-story-21/vercel.json
+++ b/support-story-21/vercel.json
@@ -10,6 +10,10 @@
       "config": {
         "distDir": "dist"
       }
+    },
+    {
+      "src": "api/**/*.js",
+      "use": "@vercel/node"
     }
   ],
   "routes": [
