--- a/support-story-21/vercel.json
+++ b/support-story-21/vercel.json
@@ -10,13 +10,29 @@
       "config": {
         "distDir": "dist"
       }
-    },
-    {
-      "src": "api/**/*.js",
-      "use": "@vercel/node"
     }
   ],
   "routes": [
+    {
+      "src": "/api/executives$",
+      "dest": "/api/executives.js",
+      "methods": ["GET", "POST"]
+    },
+    {
+      "src": "/api/executives/(.*)",
+      "dest": "/api/executives.js",
+      "methods": ["GET", "PUT", "DELETE"]
+    },
+    {
+      "src": "/api/tickets$",
+      "dest": "/api/tickets.js",
+      "methods": ["GET", "POST"]
+    },
+    {
+      "src": "/api/tickets/(.*)",
+      "dest": "/api/tickets.js",
+      "methods": ["GET", "PUT", "DELETE"]
+    },
     {
       "src": "/api/(.*)",
       "dest": "/api/index.js"
