--- a/support-story-21/.env.production
+++ b/support-story-21/.env.production
@@ -1,2 +1,2 @@
-# Frontend Environment Variables for Production
-VITE_API_URL=https://ticket-pos-backend.vercel.app/api
+# Vercel Production Environment Variables
+VITE_API_BASE_URL=
