--- a/package.json
+++ b/package.json
@@ -16,5 +16,9 @@
   },
   "devDependencies": {
     "concurrently": "^8.0.0"
+  },
+  "dependencies": {
+    "csv-parser": "^3.2.0",
+    "multer": "^2.0.2"
   }
 }
