--- a/support-story-21/package.json
+++ b/support-story-21/package.json
@@ -48,10 +48,12 @@
     "cmdk": "^1.1.1",
     "cors": "^2.8.5",
     "date-fns": "^3.6.0",
+    "dotenv": "^16.3.1",
     "embla-carousel-react": "^8.6.0",
     "express": "^4.18.2",
     "input-otp": "^1.4.2",
     "lucide-react": "^0.462.0",
+    "mysql2": "^3.6.0",
     "next-themes": "^0.3.0",
     "nodemailer": "^6.9.4",
     "react": "^18.3.1",
@@ -61,9 +63,11 @@
     "react-resizable-panels": "^2.1.9",
     "react-router-dom": "^6.30.1",
     "recharts": "^2.15.4",
+    "serverless-http": "^3.2.0",
     "sonner": "^1.7.4",
     "tailwind-merge": "^2.6.0",
     "tailwindcss-animate": "^1.0.7",
+    "twilio": "^4.15.0",
     "vaul": "^0.9.9",
     "zod": "^3.25.76"
   },
