--- a/support-story-21/vercel.json
+++ b/support-story-21/vercel.json
@@ -1,7 +1,7 @@
 {
   "version": 2,
   "buildCommand": "npm run vercel-build",
-  "installCommand": "npm install",
+  "installCommand": "npm install && cd server && npm install",
   "outputDirectory": "dist",
   "builds": [
     {
