--- a/support-story-21/package.json
+++ b/support-story-21/package.json
@@ -41,6 +41,7 @@
     "@radix-ui/react-toggle-group": "^1.1.10",
     "@radix-ui/react-tooltip": "^1.2.7",
     "@supabase/supabase-js": "^2.57.4",
+    "@tanstack/react-query": "^5.90.3",
     "axios": "^1.11.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
@@ -68,8 +69,8 @@
     "tailwind-merge": "^2.6.0",
     "tailwindcss-animate": "^1.0.7",
     "twilio": "^4.15.0",
-    "whatsapp-web.js": "^1.23.0",
     "vaul": "^0.9.9",
+    "whatsapp-web.js": "^1.23.0",
     "zod": "^3.25.76"
   },
   "devDependencies": {
